Changes for 1.7
* Allowed Edit Mode to add land units to a sea zone if there are either transports already there or transports also being added at the same time. (veqryn)

* Allowed Edit Mode to remove units owned by different players. (veqryn)

* Changed territory attachment "victoryCity" to allow integers instead of boolean, thereby allowing victory cities with greater value, and also added a tooltip to tech purchase phase to show what techs are in each category. (eurofabio)

* Allowed Edit Add Units to check if artwork exists for units not in a production frontier, and if so allow them to be created. (veqryn) 

* Added more info to Battle Calc including total TUV swing, and allowing retreat after losing all air units or having only x units left. (veqryn)

* Fixed bug where having sea units begin the turn on top of an enemy sub, and then not moving them but also not attacking, caused them to lose their movement anyway. (veqryn)

* Fixed bug where you could move a destroyer after it had killed a sub, during noncombat move. (veqryn)

* Updating text xml's and adding TWW xml for new tests. (veqryn)

* Fixing bug in air movement validation for complex movement cases. (veqryn)

* Fixing several memory leaks related to game notes staying in memory multiple times. (veqryn)

* Creating Edit Mode for Grid Based games like chess, checkers, and go. (veqryn)

* Added feature to automatically parse HTML text in game notes and in notifications, and replace all image links with links to the map folder's "doc/images/" directory, thereby allowing local image files to be used. (veqryn)

* Adding ability to specify when the attacker should retreat after how many rounds, to the battle calculator. (veqryn)

* Added fields for average number of rounds, average attacking units left when attacker won, and average defending units left when defender won, to the battle calculator. (veqryn)

* Added new Edit option to change political relationships between players. (veqryn)
